# workspace

./: .env  .env.firecrawl  .gitignore  .sdoc-cache.json  AGENTS.md  SKILL.md  myFirecrawlApiKey
.codex/plugins/: marketplace.json
.codex/plugins/codex-official-docs-ingestion/: package-lock.json  package.json
.codex/skills/sdoc/: README.md  SKILL.md  pyproject.toml  readme.md  sdoc.toml
.codex/skills/sdoc/src/sdoc/: analysis.py  cli.py  config.py  fs.py  models.py  service.py  template.py
.codex/skills/sdoc/src/sdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
.codex/skills/sdoc/tests/: test_analysis.py  test_config.py  test_service.py  test_template.py
.codex/skills/sdoc1/: README.md
codex/codex-rs/app-server/: package-info.md
docs/official/: manifest.json
docs/official-zh/book/: 000README.md  01-codex.md  02-codex-quickstart.md  03-codex-use-cases.md  04-codex-pricing.md  05-codex-prompting.md  06-codex-concepts-customization.md  07-codex-memories.md  08-codex-memories-chronicle.md  09-codex-concepts-sandboxing.md  10-codex-concepts-subagents.md  11-codex-workflows.md  12-codex-models.md  13-codex-concepts-cyber-safety.md  14-codex-app.md  15-codex-app-features.md  16-codex-app-settings.md  17-codex-app-review.md  18-codex-app-automations.md  19-codex-app-worktrees.md  20-codex-app-local-environments.md  21-codex-app-browser.md  22-codex-app-computer-use.md  23-codex-app-commands.md  24-codex-app-windows.md  25-codex-app-troubleshooting.md  26-codex-ide.md  31-codex-cli.md  (+46 more)
scripts/: generate_codex_book.pl  generate_codex_book.py
(+477 files in other folders)
